--- a/SCAPPINO/Venetian_Masaryk.html
+++ b/SCAPPINO/Venetian_Masaryk.html
@@ -2255,23 +2255,23 @@ url('fonts/') format('svg');
         -moz-transform: translate(0, 0) translate(64px, 479px) rotate(0deg);
         transform: translate(0, 0) translate(64px, 479px) rotate(0deg);
 }
-/*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(10,47,102,1); }
-/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 275px; height: 50px;
-        -ms-transform: translate(0, 0) translate(12px, 414px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(12px, 414px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(12px, 414px) rotate(0deg);
-        transform: translate(0, 0) translate(12px, 414px) rotate(0deg);
-}
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 248px; height: 66px;
-        -ms-transform: translate(0, 0) translate(25px, 341px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(25px, 341px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(25px, 341px) rotate(0deg);
-        transform: translate(0, 0) translate(25px, 341px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 240px; height: 117px;
+        -ms-transform: translate(0, 0) translate(32px, 341px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(32px, 341px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(32px, 341px) rotate(0deg);
+        transform: translate(0, 0) translate(32px, 341px) rotate(0deg);
+}
+/*#/#*//*#i111.text.css:text/base/css*/
+#i111 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i111.i112.positioning.css:positioning/base/css.2*/
+#i111 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 306px; height: 56px;
+        -ms-transform: translate(0, 0) translate(13px, 417px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(13px, 417px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(13px, 417px) rotate(0deg);
+        transform: translate(0, 0) translate(13px, 417px) rotate(0deg);
 }
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
@@ -2361,10 +2361,10 @@ url('fonts/') format('svg');
 <img id="i16" src="https://i.imgur.com/GsmTVf2.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/PHMZOzz.png"/>
-<!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Del 6 de agosto al 16 de septiembre de 2019.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!</div>
+<!--#/#--><!--#i111.text.html:text/html-->
+<div id="i111">Del 6 de agosto al 16 de septiembre de 2019.</div>
 <!--#/#--><!--#i89.image.html:image/html-->
 <img id="i89" src="https://i.imgur.com/xJqyBh6.png"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
@@ -2445,8 +2445,6 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
-bmShow('i68');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i89.image.js:image/base/js*/
@@ -2549,6 +2547,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i111.i112.positioning.js:positioning/base/js.2*/
+bmShow('i111');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2599,13 +2599,13 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i68.text.meta:text/meta*/
-name: Del 6 de agosto al 16 de septiembre de 2019.; customName: false;
-/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
 name: ¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i111.text.meta:text/meta*/
+name: Del 6 de agosto al 16 de septiembre de 2019.; customName: false;
+/*#/#*//*#i111.i112.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i89.image.meta:image/meta*/
 name: ICONO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
