--- a/SCAPPINO/Venetian_Artz.html
+++ b/SCAPPINO/Venetian_Artz.html
@@ -2140,8 +2140,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
 }
-/*#/#*//*#i91.image.css:image/base/css*/
-#i91 { opacity: 1; }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
     position: absolute;
@@ -2227,13 +2225,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.2*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 600px;
-        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-}
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
@@ -2243,23 +2234,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(64px, 479px) rotate(0deg);
         transform: translate(0, 0) translate(64px, 479px) rotate(0deg);
 }
-/*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 239px; height: 91px;
-        -ms-transform: translate(0, 0) translate(34px, 340px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(34px, 340px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(34px, 340px) rotate(0deg);
-        transform: translate(0, 0) translate(34px, 340px) rotate(0deg);
-}
 /*#/#*//*#i113.text.css:text/base/css*/
 #i113 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i113.i114.positioning.css:positioning/base/css.2*/
 #i113 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 68px;
-        -ms-transform: translate(0, 0) translate(16px, 416px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 416px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 416px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 416px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
 }
 /*#/#*//*#i89.image.css:image/base/css*/
 #i89 { opacity: 1; }
@@ -2286,6 +2268,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 479px) rotate(0deg);
+}
+/*#/#*//*#i91.image.css:image/base/css*/
+#i91 { opacity: 1; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.2*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 600px;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i93.shape.css:shape/base/css*/
 #i93 { background-color: #dedede; opacity: 0.00;
@@ -2336,6 +2327,15 @@ url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
+/*#/#*//*#i115.text.css:text/base/css*/
+#i115 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i115.i116.positioning.css:positioning/base/css.2*/
+#i115 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 260px; height: 112px;
+        -ms-transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
+        transform: translate(0, 0) translate(26px, 338px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2344,8 +2344,6 @@ url('fonts/') format('svg');
 <div id="i30"></div>
 <!--#/#--><!--#i74.image.html:image/html-->
 <img id="i74" src="https://i.imgur.com/iDYDGXa.jpg"/>
-<!--#/#--><!--#i91.image.html:image/html-->
-<img id="i91" src="https://i.imgur.com/tbm1zmk.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2360,8 +2358,6 @@ url('fonts/') format('svg');
 <img id="i16" src="https://i.imgur.com/GsmTVf2.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/PHMZOzz.png"/>
-<!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!</div>
 <!--#/#--><!--#i113.text.html:text/html-->
 <div id="i113">Del 6 de agosto al 16 de septiembre de 2019.</div>
 <!--#/#--><!--#i89.image.html:image/html-->
@@ -2372,6 +2368,8 @@ url('fonts/') format('svg');
 <div id="i70">
     
 </div>
+<!--#/#--><!--#i91.image.html:image/html-->
+<img id="i91" src="https://i.imgur.com/tbm1zmk.png"/>
 <!--#/#--><!--#i93.shape.html:shape/html-->
 <div id="i93"></div>
 <!--#/#--><!--#i97.image.html:image/html-->
@@ -2381,6 +2379,8 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i101.image.html:image/html-->
 <img id="i101" src="https://i.imgur.com/KtnVQHB.png"/>
 <!--#/#--><!--#i111.font.html:font/html-->
+<!--#/#--><!--#i115.text.html:text/html-->
+<div id="i115">¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2389,10 +2389,6 @@ bmShow('i30');
 
 /*#/#*//*#i74.i75.positioning.js:positioning/base/js.2*/
 bmShow('i74');
-/*#/#*//*#i91.image.js:image/base/js*/
-
-/*#/#*//*#i91.i92.positioning.js:positioning/base/js.2*/
-bmShow('i91');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2445,8 +2441,8 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
-bmShow('i63');
+/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
+bmShow('i113');
 /*#/#*//*#i89.image.js:image/base/js*/
 
 /*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
@@ -2481,6 +2477,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i91.image.js:image/base/js*/
+
+/*#/#*//*#i91.i92.positioning.js:positioning/base/js.2*/
+bmShow('i91');
 /*#/#*//*#i93.i94.positioning.js:positioning/base/js.2*/
 bmShow('i93');
 /*#/#*//*#i93.i95.actions.js:actions/base/js.1*/
@@ -2547,8 +2547,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i113.i114.positioning.js:positioning/base/js.2*/
-bmShow('i113');
+/*#/#*//*#i115.i116.positioning.js:positioning/base/js.2*/
+bmShow('i115');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2571,11 +2571,6 @@ name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i74.i75.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i91.image.meta:image/meta*/
-name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i91.i92.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2597,10 +2592,6 @@ name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i63.text.meta:text/meta*/
-name: ¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!; customName: false;
-/*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i113.text.meta:text/meta*/
 name: Del 6 de agosto al 16 de septiembre de 2019.; customName: false;
 /*#/#*//*#i113.i114.positioning.meta:positioning/meta.2*/
@@ -2619,6 +2610,11 @@ name: Container 1;
 data: /*!*/{}/*!*/;
 /*#/#*//*#i70.i71.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i91.image.meta:image/meta*/
+name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i91.i92.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i93.shape.meta:shape/meta*/
 name: LINK;
 /*#/#*//*#i93.i94.positioning.meta:positioning/meta.2*/
@@ -2640,4 +2636,8 @@ customName: 1;
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i111.font.meta:font/meta*/
 name: Web Font: TradeGothicLTStd-Light; type: font-local; customName: ;
+/*#/#*//*#i115.text.meta:text/meta*/
+name: ¡Compra un pantalón y obtén el 20% de descuento en toda tu compra!; customName: false;
+/*#/#*//*#i115.i116.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
