--- a/SCAPPINO/Cube1.html
+++ b/SCAPPINO/Cube1.html
@@ -641,6 +641,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i502.image.css:image/base/css*/
+#i502 { opacity: 1; }
+/*#/#*//*#i502.i503.positioning.css:positioning/base/css.2*/
+#i502 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 44px;
+        -ms-transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+}
 /*#/#*//*#i4.i456.image.css:image/base/css*/
 #i456 { opacity: 1; }
 /*#/#*//*#i456.i457.positioning.css:positioning/base/css.2*/
@@ -649,15 +658,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
         transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
-}
-/*#/#*//*#i4.i502.text.css:text/base/css*/
-#i502 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i502.i503.positioning.css:positioning/base/css.2*/
-#i502 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 40px;
-        -ms-transform: translate(0, 0) translate(9px, 183px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 183px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 183px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 183px) rotate(0deg);
 }
 /*#/#*//*#i4.i486.image.css:image/base/css*/
 #i486 { opacity: 1; }
@@ -927,10 +927,10 @@ url('fonts/') format('svg');
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/l9s9YfU.jpg"/>
+<!--#/#--><!--#i4.i502.image.html:image/html-->
+<img id="i502" src="https://i.imgur.com/gWu0ilL.jpg"/>
 <!--#/#--><!--#i4.i456.image.html:image/html-->
 <img id="i456" src="https://i.imgur.com/GsmTVf2.png"/>
-<!--#/#--><!--#i4.i502.text.html:text/html-->
-<div id="i502">Compra un PANTALÓN y obtén un 20% de descuento en toda tu compra.</div>
 <!--#/#--><!--#i4.i486.image.html:image/html-->
 <img id="i486" src="https://i.imgur.com/PHMZOzz.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -1032,6 +1032,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
+/*#/#*//*#i4.i502.image.js:image/base/js*/
+
+/*#/#*//*#i502.i503.positioning.js:positioning/base/js.2*/
+bmShow('i502');
 /*#/#*//*#i4.i456.image.js:image/base/js*/
 
 /*#/#*//*#i456.i457.positioning.js:positioning/base/js.2*/
@@ -1104,8 +1108,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i502.i503.positioning.js:positioning/base/js.2*/
-bmShow('i502');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1307,15 +1309,16 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i502.image.meta:image/meta*/
+name: TXT; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i502.i503.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i456.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i456.i457.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i502.text.meta:text/meta*/
-name: Compra un PANTALÓN y obtén un 20% de descuento en toda tu compra.; customName: false;
-/*#/#*//*#i502.i503.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i486.image.meta:image/meta*/
 name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
