--- a/SCAPPINO/Cube2.html
+++ b/SCAPPINO/Cube2.html
@@ -650,14 +650,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
         transform: translate(0, 0) translate(195px, 217px) rotate(0deg);
 }
-/*#/#*//*#i4.i504.text.css:text/base/css*/
-#i504 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: TradeGothicLTStd-Light; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i4.i504.image.css:image/base/css*/
+#i504 { opacity: 1; }
 /*#/#*//*#i504.i505.positioning.css:positioning/base/css.2*/
-#i504 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 254px; height: 44px;
-        -ms-transform: translate(0, 0) translate(23px, 187px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(23px, 187px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(23px, 187px) rotate(0deg);
-        transform: translate(0, 0) translate(23px, 187px) rotate(0deg);
+#i504 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 44px;
+        -ms-transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 177px) rotate(0deg);
 }
 /*#/#*//*#i4.i486.image.css:image/base/css*/
 #i486 { opacity: 1; }
@@ -920,8 +920,8 @@ url('fonts/') format('svg');
 <img id="i130" src="https://i.imgur.com/TDmydx8.jpg"/>
 <!--#/#--><!--#i4.i456.image.html:image/html-->
 <img id="i456" src="https://i.imgur.com/GsmTVf2.png"/>
-<!--#/#--><!--#i4.i504.text.html:text/html-->
-<div id="i504">Compra un PANTALÓN y obtén un 20% de descuento en toda tu compra.</div>
+<!--#/#--><!--#i4.i504.image.html:image/html-->
+<img id="i504" src="https://i.imgur.com/gWu0ilL.jpg"/>
 <!--#/#--><!--#i4.i486.image.html:image/html-->
 <img id="i486" src="https://i.imgur.com/PHMZOzz.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -1024,6 +1024,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i456.i457.positioning.js:positioning/base/js.2*/
 bmShow('i456');
+/*#/#*//*#i4.i504.image.js:image/base/js*/
+
+/*#/#*//*#i504.i505.positioning.js:positioning/base/js.2*/
+bmShow('i504');
 /*#/#*//*#i4.i486.image.js:image/base/js*/
 
 /*#/#*//*#i486.i487.positioning.js:positioning/base/js.2*/
@@ -1092,8 +1096,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i504.i505.positioning.js:positioning/base/js.2*/
-bmShow('i504');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1300,10 +1302,11 @@ name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i456.i457.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i504.text.meta:text/meta*/
-name: Compra un PANTALÓN y obtén un 20% de descuento en toda tu compra.; customName: false;
+/*#/#*//*#i4.i504.image.meta:image/meta*/
+name: TXT; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i504.i505.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i486.image.meta:image/meta*/
 name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
